--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,21 @@
+nav {
+    margin-bottom: 20px;
+}
+.controls, .appointment {
+    margin-bottom: 20px;
+}
+#addAppointment {
+    margin-bottom: 20px;
+}
+.card-header {
+    cursor: pointer;
+}
+#clear {
+    margin-right: 10px;
+}
 footer {
+    border-top: 0.5px solid black;
+    background-color: white;
+    width: 100%;
     font-size: 0.75em;
 }
